2008-05-29 Fixed two bugs in texmanager.py:
               improved comparison of dvipng versions
               fixed a bug introduced when get_grey method was added
           - DSD

2008-05-28 Fix crashing of PDFs in xpdf and ghostscript when two-byte
           characters are used with Type 3 fonts - MGD

2008-05-28 Allow keyword args to configure widget properties as
           requested in
           http://sourceforge.net/tracker/index.php?func=detail&aid=1866207&group_id=80706&atid=560722
           - JDH

2008-05-28 Replaced '-' with u'\u2212' for minus sign as requested in
           http://sourceforge.net/tracker/index.php?func=detail&aid=1962574&group_id=80706&atid=560720

2008-05-28 zero width/height Rectangles no longer influence the
           autoscaler.  Useful for log histograms with empty bins -
           JDH

2008-05-28 Fix rendering of composite glyphs in Type 3 conversion
           (particularly as evidenced in the Eunjin.ttf Korean font)
           Thanks Jae-Joon Lee for finding this!

2008-05-27 Rewrote the cm.ScalarMappable callback infrastructure to
           use cbook.CallbackRegistry rather than custom callback
           handling.  Amy users of add_observer/notify of the
           cm.ScalarMappable should uae the
           cm.ScalarMappable.callbacksSM CallbackRegistry instead. JDH

2008-05-27 Fix TkAgg build on Ubuntu 8.04 (and hopefully a more
           general solution for other platforms, too.)

2008-05-24 Added PIL support for loading images to imread (if PIL is
           available) - JDH

2008-05-23 Provided a function and a method for controlling the
           plot color cycle. - EF

2008-05-23 Major revision of hist(). Can handle 2D arrays and create
           stacked histogram plots; keyword 'width' deprecated and
           rwidth (relative width) introduced; align='edge' changed
           to center of bin - MM

2008-05-22 Added support for ReST-based doumentation using Sphinx.